# richillcapital-tdameritrade-python

./: .gitignore  README.md  pyproject.toml
richillcapital_tdameritrade/: client.py
