[tool.pdm]

[project]
name = "richillcapital-tdameritrade"
version = "0.1.0"
description = ""
authors = [
    {name = "Megnsyue Amao Tsai", email = "mengsyue.tsai@outlook.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
