[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "python-dotenv>=0.21.1",
]

[project]
name = "richillcapital-tdameritrade"
version = "0.1.2"
description = ""
authors = [
    {name = "Megnsyue Amao Tsai", email = "mengsyue.tsai@outlook.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
